# spliceailookup-link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mcp_server.py  pyproject.toml  server.py
.claude/skills/ci-failure-triage/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.github/workflows/: ci.yml  conformance.yml  container-security.yml
docker/: Dockerfile  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  mcp-assessment-v0.7.0-2026-06-12.md  mcp-assessment-v0.8.0-2026-06-12-resolution.md  mcp-assessment-v0.8.0-2026-06-12.md  mcp-assessment-v0.9.0-2026-06-12.md  mcp-consumer-assessment-2026-06-12.md  mcp-evaluation.md  mcp-resolution-v0.10.0-2026-06-12.md  mcp-tester-report-2026-06-12.md  mcp-ux-9.5-resolution.md  mcp-ux-assessment.md
docs/superpowers/plans/: 2026-06-11-eval-improvements-2.md  2026-06-11-eval-improvements.md  2026-06-11-spliceailookup-link-build.md  2026-06-12-assessment-v0.7.0-fixes.md  2026-06-12-assessment-v0.8.0-fixes.md  2026-06-12-consumer-assessment-fixes.md  2026-06-12-eval-improvements-3.md  2026-06-12-mcp-ux-9.5.md  2026-06-12-mcp-v0.10.0-above-9.5.md  2026-06-12-tester-report-fixes.md
docs/superpowers/specs/: 2026-06-11-eval-improvements-2-design.md  2026-06-11-eval-improvements-design.md  2026-06-11-spliceailookup-link-design.md  2026-06-12-assessment-v0.7.0-fixes-design.md  2026-06-12-assessment-v0.8.0-fixes-design.md  2026-06-12-beyond-9.5-design.md  2026-06-12-consumer-assessment-fixes-design.md  2026-06-12-eval-improvements-3-design.md  2026-06-12-mcp-ux-9.5-design.md  2026-06-12-mcp-v0.10.0-above-9.5-design.md  2026-06-12-tester-report-fixes-design.md
scripts/: check_file_size.py
spliceailookup_link/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  server_manager.py  variant.py
spliceailookup_link/api/: __init__.py  base_client.py  ensembl_client.py  scoring_client.py
spliceailookup_link/mcp/: __init__.py  annotations.py  build_check.py  errors.py  facade.py  next_commands.py  provenance.py  resources.py  schema_relax.py  shaping.py
spliceailookup_link/mcp/tools/: __init__.py  _batch_dedup.py  _batch_runner.py  _common.py  _diagnose.py  _predict.py  _predict_shape.py  batch.py  combined.py  metadata.py  pangolin.py  resolve.py  spliceai.py
spliceailookup_link/services/: __init__.py  splice_service.py  telemetry.py
tests/: conftest.py
tests/fixtures/: api_responses.py
tests/integration/: test_live_api.py
tests/unit/: test_assessment_v0_8_0.py  test_batch.py  test_build_check.py  test_cli.py  test_config_cli.py  test_diagnose.py  test_errors.py  test_eval_fixes.py  test_eval_fixes_2.py  test_eval_fixes_3.py  test_eval_fixes_4.py  test_eval_v07.py  test_predict_shape.py  test_scoring_client.py  test_server_manager.py  test_service.py  test_shaping.py  test_telemetry.py  test_tool_names.py  test_tools.py  test_ux_9_5.py  test_v0_10_0.py  test_variant_parse.py
