[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spliceailookup-link"
version = "0.10.0"
description = "A unified server providing REST API and MCP interfaces for SpliceAI / Pangolin splice-impact prediction (Broad SpliceAI Lookup backends)."
readme = "README.md"
authors = [{ name = "Bernt Popp" }]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["spliceai", "pangolin", "splicing", "variant", "genomics", "bioinformatics", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.46.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "async-lru>=2.0.4,<3.0.0",
    "structlog>=24.4.0,<26.0.0",
    "orjson>=3.10.0,<4.0.0",
    "rich>=15.0.0,<16.0.0",
    "typer>=0.25.1,<1.0.0",
    "mcp[cli]>=1.27.0,<2.0.0",
    "fastmcp[tasks]>=3.2.0,<4.0.0",
    "gunicorn>=25.3.0,<27.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.14.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.scripts]
spliceailookup-link = "server:main"
spliceailookup-link-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/berntpopp/spliceailookup-link"
Repository = "https://github.com/berntpopp/spliceailookup-link"
Issues = "https://github.com/berntpopp/spliceailookup-link/issues"

[tool.hatch.build.targets.wheel]
packages = ["spliceailookup_link"]
include = [
    "server.py",
    "mcp_server.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "S", "T20", "SIM", "RUF"]
ignore = ["S101", "E501", "B008", "N999", "RUF006", "RUF012", "RUF022", "SIM108", "SIM117", "T201", "UP042"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T20"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
disable_error_code = ["return-value", "union-attr"]
exclude = [".*site-packages.*", ".*/venv/.*", ".*/.venv/.*", "htmlcov/.*"]

[[tool.mypy.overrides]]
module = [
    "async_lru.*",
    "structlog.*",
    "mcp.*",
    "fastmcp.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--strict-markers", "-ra", "--import-mode=importlib"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (live upstream calls)",
]

[tool.coverage.run]
source = ["spliceailookup_link"]
omit = ["tests/*", "*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_empty = true
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
